# aspen

./: Cargo.toml  default.nix  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 28bfpj1szalxja5z9240v5kpx7jh7np3-source  4j75zgssmj4wjsjlh03bhgkcxdggm3bh-source  5clqkl912951pkqaiha2j6a2wi6pskkj-source  7isl94kiypnk70f2ka7vpkms1cz1l5m8-source  7yajwyj4mxbrh6bnk1ja38ffp5flhg62-source  8j9ma3qjq9vr3dcj3p7fs7qvz4ykhc1n-source  fa2x09hdz6sif3rrlnxzd701s3qabcmw-source  k5r2fmpplhcccarkxnjlixd93830y5f0-source  ljjhvyljqm999fw6mm6q4wjnfd7iv5b2-source  lpknlys6qv1rlci1nyksyaxipp7hq96s-source  sngxry8m9dl4z5qn0rl7fd778p7sms7d-source  zzxkxr9smi69hg3xvz7586hbvvdp59g3-source
src/: commands.rs  config.rs  git.rs  main.rs  privilaged.rs  sudo.rs
