[package]
name = "aspen"
version = "0.1.0"
edition = "2021"
description = "personal helper for a personal computer"
authors = ["Amir Alesheikh <amirhossein.alesheikh@gmail.com>"]
license = "GPL-3"

[package.metadata.nix]
build = true
app = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"

[dependencies]
crossterm = "0.25.0"
git2 = "0.15.0"
inquire = "0.5.2"
is_sudo = "0.0.1"
libc = "0.2.137"
log = "0.4.17"
spinners = "4.1.0"
thiserror = "1.0.37"
